# Core

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/CoreApp/: CMakeLists.txt  ChangeLog  ChangeLog.md  Readme.md
apps/CoreApp/gtest/: AckTest.cpp  CMakeLists.txt  DatabaseTest.cpp  ExecutorTest.cpp  FactoryTest.cpp  FullRunTest.cpp  Main.cpp  ManagerTest.cpp  StateTest.cpp  ValidatorTest.cpp  VisitTest.cpp
apps/CoreApp/inc/: CoreAppDatabase.h  CoreAppExecutor.h  CoreAppManager.h  CoreAppRequestFactory.h  CoreAppRequestQueue.h  CoreAppRequestValidator.h  CoreAppTypes.h  CoreDocIPCInterface.h  FreezRequest.h  FreezeRequest.h  IPCClient.h  IPCInterface.h  InstallRequest.h  InvalidRequest.h  StartRequest.h  StateMachine.h  StopRequest.h  UnfreezRequest.h  UnfreezeRequest.h  UninstallRequest.h  UpdateRequest.h  Visitor.h  iApp.h  iCoreAppAck.h  iCoreAppRequest.h  iIPCClient.h
apps/CoreApp/src/: CoreAppDatabase.cpp  CoreAppExecutor.cpp  CoreAppManager.cpp  CoreAppRequestFactory.cpp  CoreAppRequestQueue.cpp  CoreAppRequestValidator.cpp  CoreDocIPCInterface.cpp  FreezRequest.cpp  FreezeRequest.cpp  IPCClient.cpp  IPCInterface.cpp  InstallRequest.cpp  InvalidRequest.cpp  StartRequest.cpp  StateMachine.cpp  StopRequest.cpp  UnfreezRequest.cpp  UnfreezeRequest.cpp  UninstallRequest.cpp  UpdateRequest.cpp  Visitor.cpp  iApp.cpp  iCoreAppAck.cpp  iCoreAppRequest.cpp  iIPCClient.cpp  main.cpp
apps/CoreApp/tools/: dbInit.sh  dbInitTest.sh  dbInitYocto.sh
apps/WDog/: CMakeLists.txt  FleXdWatchdog.cpp  FleXdWatchdog.h  FleXdWatchdogEvent.cpp  config.ini  main.cpp
apps/WDog/inc/: FleXdWatchdog.h  FleXdWatchdogEvent.h  IPCInterface.h
apps/WDog/resources/: config.ini
apps/WDog/src/: FleXdWatchdog.cpp  FleXdWatchdogEvent.cpp  IPCInterface.cpp  main.cpp
